third_year/programming_languages_and_paradigms/project_2/PL-version/examples/good/13-statyczne-typowanie.hml
let first = 3 in 
let second = [] in
let third = \x -> 17 * x
in let fourth = true
in let fifth x y = x - y
in fifth (third first) first
