third_year/programming_languages_and_paradigms/project_2/PL-version/examples/bad/niezgodne-typy-6.hml
let lambda_one = \x -> 1 in
let lambda_sum = \x y -> x + y in
[lambda_sum, lambda_one]